# Culvers_TidByt

./: .gitignore  ARCHITECTURE.md  ASSET_SPEC.md  GOOGLE_API_SETUP.md  README.md  REPO_CONTRACT.md  TODO.md  WORKLOG.md  check_render_data.py  config.example.yaml  config.yaml  deploy_tidbyt.sh  flavor_colors_reference.txt  flavor_display_limits.txt  flavor_display_reference.py  font_comparison.html  main.py  outline.md  pyproject.toml  run.sh  show_all_flavors.py  test_tidbyt.py  verify_render.py  visualize_detection.py
.claude/: settings.json
.planning/: .continue-here.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  deferred-items.md  v1.1-MILESTONE-AUDIT.md
analytics/: __init__.py  basic_metrics.py  batch_forecast.py  collaborative.py  data_loader.py  embeddings.py  evaluate.py  forecast_writer.py  markov.py  patterns.py  pca_baseline.py  predict.py  review.ipynb
archive/: custard-agent-config.md  custard-product-brief.md  custard-restructuring-plan.md
docs/: GOOGLE_API_SETUP.md  alerts.html  calendar.html  compare-page.js  compare.html  cone-profile-spec.md  cone-renderer.js  flavor-audit.html  flavors.json  forecast-map.html  fun-page.js  fun.html  group.html  index.html  manifest.json  map.html  multi.html  planner-domain.js  planner-shared.js  planner-ui.js  privacy.html  quiz.html  radar.html  scoop.html  shared-nav.js  siri.html  stores.json  style.css  sw.js  today-page.js  todays-drive.js  trial-compare.html  updates-page.js  updates.html  widget.html
scripts/: analytics_report.py  backfill_national.py  run.sh  (+16 more)
(+249 files in other folders)
